# cassandra-th

./: .gitignore  cassandra-th.cabal
src/: Cassandra.hs  Test.hs
src/Cassandra/: QQ.hs  RecordTH.hs  Schema.hs  SchemaPrinter.hs  TH.hs
